--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.479.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
